--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "firebase-admin": "^13.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.11.0"
+    "mongoose": "^8.11.0",
+    "morgan": "^1.10.0"
   }
 }
